Fixes: NB#191271 -  MCompleter has wrong size.
RevBy: TrustMe
Details: Now meegotouch will try to use the size policy specified in css
as higher priority than its view::sizeHint(). But MCompleter need to use
its view's sizeHint() to calculate size dynamically. So should overwrite
the size policy to invalid in css file.

--- a/base/meegotouch/libmeegotouchviews/style/mcompleterstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mcompleterstyle.css
@@ -1,10 +1,9 @@
 @const COMPLETERLABELMARGIN: $MARGIN_XLARGE;
 @const COMPLETERBUTTONMARGIN: $MARGIN_DOUBLE;
 
-/* MCompleterStyle : MWidgetStyle */
+/* MCompleterStyle : MSceneWindowStyle */
 MCompleterStyle {
     background-image: meegotouch-textedit-completer-background $CORNER_MARGINS;
-    /*background-opacity: 0.8;*/
     highlight-color: #FF0000;
     height: 88;
     display-border: $MARGIN_DOUBLE;
@@ -12,6 +11,10 @@ MCompleterStyle {
     button-margin: $COMPLETERBUTTONMARGIN;
     button-width: 100;
     y-position-offset: 8;
+
+    minimum-size: -1 -1;
+    preferred-size: -1 -1;
+    maximum-size: -1 -1;
 
     margin-left: 0;
     margin-top: 0;
